--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,12 @@
   </body>
 </html>
 
+<!-- 🟩 Botón de logout -->
+<form action="/usuarios/logout" method="GET" style="display: inline;">
+  <button type="submit">🚪 Cerrar sesión</button>
+</form>
+
+
 
 
 
